--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <!-- Profil Fotoğrafı -->
     <div class="profile-photo">
-      <img src="https://via.placeholder.com/150" alt="Profil Fotoğrafı">
+      <img src="IMG_3031.jpeg" alt="Profil Fotoğrafı">
     </div>
     <h1 class="neon-text">Hoş Geldin!</h1>
     <div id="links" class="links"></div>
