--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="profile-photo">
       <img src="IMG_3031.jpeg" alt="Profil Fotoğrafı">
     </div>
-    <h1 class="neon-text">Hoş Geldin!</h1>
+    <h1 class="neon-text">Itemsatis Honour</h1>
     <div id="links" class="links"></div>
   </div>
   <script src="script.js"></script>
