--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Honour01</title>
-  <!-- Font Awesome CSS -->
+  <title>berlin</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <!-- Profil Fotoğrafı -->
+    
     <div class="profile-photo">
+      <!-- profil fotografı -->
       <img src="IMG_3031.jpeg" alt="Profil Fotoğrafı">
     </div>
     <h1 class="neon-text">Itemsatis Honour</h1>
